--- a/package.json
+++ b/package.json
@@ -19,24 +19,22 @@
   },
   "license": "MIT",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "files": [
     "src/"
   ],
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "node --test ./test/*"
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^7.18.0"
+    "@typescript-eslint/utils": "^8.43.0"
   },
   "devDependencies": {
-    "@typescript-eslint/rule-tester": "^7.18.0",
-    "jest": "^29.7.0"
+    "@typescript-eslint/rule-tester": "^8.43.0"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
+    "@typescript-eslint/parser": "^8.43.0",
     "typescript": "^5.9.2"
   }
 }
